﻿lk_logger.py

current version: 3.6

--------------------------------------------------------------------------------

3.6 | 2020-08-30
    - [变更] lk-logger 模块从 lk-utils 中剥离并独立
    - [移除] 不再引用 time_utils.simple_time() 函数
    - [更新] 默认不打印 DEBUG 级别的信息
    - [更新] 部分变量变为私有变量
3.5 | 2019-11-06
    - [新增] LKLogger 新增 terminal 类变量, 用于指定输出终端
    - [变更] init_counter() 合并到 wrap_counter()
    - [优化] 重构计数器相关的方法
    - [优化] count(), enum() 使用更安全的类型检查
    - [优化] init_count() 调整为与 count() 行为一致
    - [修复] MsgRecorder.record() 在记录 tag 时的错误
    - [新增] 计数器增加 interval 参数
    - [变更] 计数器从 _base_print() 改为在 log*x() 方法中实现
    - [变更] _base_print() 移除 caller 参数
    - [修复] 计数器 interval 参数
    - [移除] MsgRecorder.show_important_messages() 取消对 msg_list 的排序行为
    - [优化] logp() 方法
    - [变更] init_count() 合并到 count() 方法
    - [优化] dump_log() 方法
    - [优化] 计数方法
    - [修复] log() 在打印非 str 类型的单变量时的错误
3.4 | 2019-10-22
    - 取消向后兼容的方法
    - 新增 logp() 方法
    - 调整 MsgRecorder.show_important_messages() 的显示效果
    - 拆除内置的 testflight() 方法
    - 新增 _organize_messages() 方法以减少 log*() 的结构冗余
    - 优化 caller frame 的查找流程
    - _base_print() 移除 h 参数
    - 新增 _self 变量来调节内部的 direct_caller 变动
    - AstAnalyser 优化对关键字参数的裁剪处理
    - 修复外部调用者使用 h='parent' 时的指向错误
    - 调整 _organize_messages() 返回的元组中的元素类型
    - AstAnalyser.sanitize_string() 优化对 True, False, None 的处理
    - log*() 返回 _base_print() 的值
    - 优化 _extract_vars_from_srcln() 方法
    - MsgRecorder.show_important_messages() 默认不显示 DEBUG 级别的详情信息
3.3 | 2019-08-20
    - 使用 AstAnalyser 取代 ParamsMatcher
    - AstAnalyser 修复关键词参数引起的报错
    - AstAnalyser 优化对字符串的识别
    - AstAnalyser 修复源码行换行引起的语法解析错误
    - AstAnalyser 修复因中文字符引起的 col_offset 偏移错误
    - logd*() 方法允许按照 loga 形式处理 var_names
3.2 | 2019-06-25
    - 新增 lite_mode 简单打印方式
    - 修复 over() 在显示结束时间时的错误
    - 恢复 total_count 成员身份
    - _extract_vars_from_srcln() 修复一种新发现的折行错误
    - 优化 _base_print() 在 lite_mode 下的打印效果
    - dump_log() 缺省值改由 file_sniffer.getpath() 提供
    - print_important_msg() 若 Recorder 对象无 tag_messages 则立刻返回